# local_llm

./: .gitignore  CHANGELOG.md  __init__.py  build_and_install.ps1  build_and_install.sh  client_examples.py  conda.sh  install.py  install_and_run.py  llm_client.py  llm_helpers.py  llm_local_server.py  local_llm_server.py  pyproject.toml  requirements.txt  run.py  run_server.ps1  run_server.sh  set_executable.py  setup.py  sys_setup.py
.github/workflows/: create-release-autobump.yml  python-package.yml
client/: __init__.py  llm_helpers.py
example/: example_llm_client.py  example_llm_client.txt  example_llm_wrapper.py  example_llm_wrapper.txt
laurus_llm/: __init__.py  app.py  config.py  endpoints.py  generator.py  lauruslog.py  scan.py  start_cluster.py  taskqueue.py
laurus_llm/client/: __init__.py  llm_client.py  llm_helpers.py
laurus_llm/server/: __init__.py  app.py  config.py  endpoints.py  generator.py  models.py  taskqueue.py
server/: __init__.py  app.py  config.py  endpoints.py  generator.py  llm_local_server.py  taskqueue.py
