[build-system]
requires = [ "setuptools>=64", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "laurus-llm"
version = "0.1.6"
description = "Local LLM server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [ "fastapi", "uvicorn", "transformers", "bitsandbytes", "accelerate", "pyyaml", "requests", "pydantic",]

[project.scripts]
laurus-llm = "laurus_llm.app:main"

[tool.setuptools.packages.find]
where = [ ".",]
include = [ "laurus_llm*",]
